--- a/site/_robots.njk
+++ b/site/_robots.njk
@@ -5,4 +5,4 @@ eleventyExcludeFromCollections: true
 User-agent: *
 Allow: /
 
-Sitemap: {{ site.url }}/sitemap.xml
+Sitemap: {{ env.SITE_URL }}/sitemap.xml
