feat: minify html

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -39,8 +39,8 @@
   <meta name="tags" content="{{ tags | sort }}" />
 {% endif %}
 
-<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png" />
 
 {# update from alwatr index and dynamic from site #}
