--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
 {% include "meta.njk" %}
+<style>
+  body {
+    padding: 0;
+  }
+</style>
 </head>
 <body>
   {{ content | safe }}
