feat: add base layout

--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -9,6 +9,10 @@
 </style>
 </head>
 <body>
+  {% include "header.njk" %}
+
   {{ content | safe }}
+
+  {% include "footer.njk" %}
 </body>
 </html>
