chore: rename side bar to nav

--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -10,7 +10,7 @@
 </head>
 <body>
   {% include "header.njk" %}
-  {% include "side-bar.njk" %}
+  {% include "nav.njk" %}
 
   {{ content | safe }}
 
