--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -58,26 +58,20 @@
   <meta name="tags" content="{{ tags | sort }}"/>
 {% endif %}
 
-<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png"/>
 <link rel="shortcut icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png"/>
 <link rel="shortcut icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png"/>
 
-<!-- TODO: use {{TEMPLATE_KEY}} and replace in esbuild -->
-<!-- TODO: preconnect -->
-<!-- TODO: preload config.js or better solution -->
-<!-- TODO: preload fonts -->
-<!-- FIXME: cdn connecting issues -->
-<!-- FIXME: fetchpriority="high" -->
-
 <!-- Add to home screen for Chrome on Android. Fallback for manifest.json -->
 <meta name="mobile-web-app-capable" content="yes"/>
+
 <!-- Add to home screen for Safari on iOS -->
+<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png"/>
+<link rel="apple-touch-startup-image" size="192x192" href="/img/icon-192.png"/>
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 <meta name="apple-mobile-web-app-title" content="{{ site.title }}"/>
-<link rel="apple-touch-startup-image" href="/img/icon-192.png"/>
-<!-- Home screen icons -->
-<link rel="apple-touch-icon" href="/img/icon-180.png"/>
+<link rel="apple-touch-icon" size="180x180" href="/img/icon-180.png"/>
+
 <!-- Tile icon for Windows 8 (144x144 + tile color) -->
 <meta name="msapplication-TileImage" content="/img/icon-512.png"/>
 <meta name="msapplication-TileColor" content="{{ site.theme.light }}"/>
