fix(meta): review

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -7,46 +7,47 @@
 {% endif %}
 
 <title>{{ pageTitle }}</title>
-<link rel="canonical" href="{{ currentUrl }}"/>
+<link rel="canonical" href="{{ currentUrl }}" />
 
-<meta charset="utf-8"/>
+<meta charset="utf-8" />
 
 {# <link rel="preload" as="style" href="main.css" fetchpriority="high" /> #}
 {# <link rel="preload" as="script" href="main.js" fetchpriority="high" crossorigin /> #}
 {# <link media="print" rel="stylesheet" href="main.css" onload="this.media='all';this.onload=null;"/> #}
 <link rel="manifest" href="manifest.webmanifest"/>
 
-<meta name="color-scheme" content="light dark"/>
-<meta name="theme-color" media="(prefers-color-scheme: light)" content="{{ site.theme.light }}"/>
-<meta name="theme-color" media="(prefers-color-scheme: dark)" content="{{ site.theme.dark }}"/>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, user-scalable=yes, viewport-fit=cover"/>
+<meta name="color-scheme" content="light dark" />
+<meta name="theme-color" media="(prefers-color-scheme: light)" content="{{ site.theme.light }}" />
+<meta name="theme-color" media="(prefers-color-scheme: dark)" content="{{ site.theme.dark }}" />
+<meta name="viewport"
+  content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, user-scalable=yes, viewport-fit=cover" />
 
-<meta name="application-name" content="{{ site.title }}"/>
-<meta property="og:site_name" content="{{ site.title }}"/>
-<meta property="og:title" content="{{ pageTitle }}"/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="{{ currentUrl }}"/>
+<meta name="application-name" content="{{ site.title }}" />
+<meta property="og:site_name" content="{{ site.title }}" />
+<meta property="og:title" content="{{ pageTitle }}" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="{{ currentUrl }}" />
 
 {% set socialImage = sharing_image or thumbnail or hero or site.defaultSocialImage %}
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta property="og:image" content="{{ socialImage }}"/>
-<meta property="og:image:secure_url" content="{{ socialImage }}"/>
-<meta name="twitter:image" content="{{ socialImage }}"/>
-<meta property="og:image:type" content="image/png"/>
-<meta property="og:image:width" content="500"/>
-<meta property="og:image:height" content="500"/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta property="og:image" content="{{ socialImage }}" />
+<meta property="og:image:secure_url" content="{{ socialImage }}" />
+<meta name="twitter:image" content="{{ socialImage }}" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="500" />
+<meta property="og:image:height" content="500" />
 
 {% if socialImageAlt %}
-  <meta property="og:image:alt" content="{{ alt }}"/>
-  <meta name="twitter:image:alt" content="{{ alt }}"/>
+<meta property="og:image:alt" content="{{ alt }}" />
+<meta name="twitter:image:alt" content="{{ alt }}" />
 {% endif %}
 
-<meta name="description" content="{{ description }}"/>
-<meta name="twitter:description" content="{{ description }}"/>
-<meta property="og:description" content="{{ description }}"/>
+<meta name="description" content="{{ description }}" />
+<meta name="twitter:description" content="{{ description }}" />
+<meta property="og:description" content="{{ description }}" />
 
-<meta name="twitter:site" content="@alidotmd"/>
+<meta name="twitter:site" content="@alidotmd" />
 
 {#
 {% if authors %}
@@ -55,24 +56,23 @@
 #}
 
 {% if tags %}
-  <meta name="tags" content="{{ tags | sort }}"/>
+  <meta name="tags" content="{{ tags | sort }}" />
 {% endif %}
 
-<link rel="shortcut icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png"/>
-<link rel="shortcut icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png"/>
+<link rel="icon" type="image/png" sizes="32x32" href="/img/icon-32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/img/icon-16.png" />
 
 <!-- Add to home screen for Chrome on Android. Fallback for manifest.json -->
-<meta name="mobile-web-app-capable" content="yes"/>
+<meta name="mobile-web-app-capable" content="yes" />
 
 <!-- Add to home screen for Safari on iOS -->
-<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png"/>
-<link rel="apple-touch-startup-image" size="192x192" href="/img/icon-192.png"/>
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-<meta name="apple-mobile-web-app-title" content="{{ site.title }}"/>
-<link rel="apple-touch-icon" size="180x180" href="/img/icon-180.png"/>
+<link rel="apple-touch-icon" size="180x180" href="/img/icon-180.png" />
+<link rel="apple-touch-startup-image" size="192x192" href="/img/icon-192.png" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<meta name="apple-mobile-web-app-title" content="{{ site.title }}" />
 
 <!-- Tile icon for Windows 8 (144x144 + tile color) -->
-<meta name="msapplication-TileImage" content="/img/icon-512.png"/>
-<meta name="msapplication-TileColor" content="{{ site.theme.light }}"/>
-<meta name="msapplication-tap-highlight" content="no"/>
+<meta name="msapplication-TileImage" content="/img/icon-512.png" />
+<meta name="msapplication-TileColor" content="{{ site.theme.light }}" />
+<meta name="msapplication-tap-highlight" content="no" />
