--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 {% include "meta.njk" %}
 <style>
