feat: image path

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -59,20 +59,20 @@
   <meta name="tags" content="{{ tags | sort }}" />
 {% endif %}
 
-<link rel="icon" type="image/png" sizes="32x32" href="/img/icon-32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/img/icon-16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/img/meta/icon-32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/img/meta/icon-16.png" />
 
 <!-- Add to home screen for Chrome on Android. Fallback for manifest.json -->
 <meta name="mobile-web-app-capable" content="yes" />
 
 <!-- Add to home screen for Safari on iOS -->
-<link rel="apple-touch-icon" size="180x180" href="/img/icon-180.png" />
-<link rel="apple-touch-startup-image" size="192x192" href="/img/icon-192.png" />
+<link rel="apple-touch-icon" size="180x180" href="/img/meta/icon-180.png" />
+<link rel="apple-touch-startup-image" size="192x192" href="/img/meta/icon-192.png" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="apple-mobile-web-app-title" content="{{ site.title }}" />
 
 <!-- Tile icon for Windows 8 (144x144 + tile color) -->
-<meta name="msapplication-TileImage" content="/img/icon-512.png" />
+<meta name="msapplication-TileImage" content="/img/meta/icon-512.png" />
 <meta name="msapplication-TileColor" content="{{ site.theme.light }}" />
 <meta name="msapplication-tap-highlight" content="no" />
