refactor: var name

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -1,6 +1,6 @@
 {% set pageTitle = title + ' - ' + site.title %}
 
-{% set currentUrl = env.SITE_URL + page.url %}
+{% set currentUrl = env.siteUrl + page.url %}
 
 {% if not description %}
   {% set description = site.description %}
