--- a/site/_robots.njk
+++ b/site/_robots.njk
@@ -2,7 +2,7 @@
 permalink: "/robots.txt"
 eleventyExcludeFromCollections: true
 ---
-{% if env.NO_INDEX == true %}
+{% if env.noIndex == true %}
 User-agent: *
 Disallow: /
 {% else %}
