--- a/site/_sitemap.njk
+++ b/site/_sitemap.njk
@@ -6,7 +6,7 @@ eleventyExcludeFromCollections: true
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
   {% for page in collections.all %}
     <url>
-      <loc>{{ env.SITE_URL }}{{ page.url | url }}</loc>
+      <loc>{{ env.siteUrl }}{{ page.url | url }}</loc>
       <lastmod>{{ page.date.toISOString() }}</lastmod>
       <priority>{{ page.data.priority | default(1) }}</priority>
     </url>
