--- a/site/index.njk
+++ b/site/index.njk
@@ -2,110 +2,38 @@
 layout: base.njk
 title: Home
 ---
-
-<div class="">
-  <div class="space-y-16 container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
-    <!-- Heading -->
-    <div class="text-center">
-      <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="text-yellow-300 mb-5 hi-outline hi-code inline-block w-24 h-24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
-      </svg>
+<div class="flex flex-col lg:flex-row space-y-16 lg:space-y-0 text-center lg:text-left container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
+  <div class="lg:w-1/2 lg:flex lg:items-center">
+    <div>
+      <div class="font-semibold inline-flex px-2 py-1 leading-4 mb-2 text-sm rounded text-gray-700 bg-gray-200">
+          v2.0 Latest Version
+        </div>
       <h2 class="text-3xl md:text-4xl font-extrabold mb-4">
-        Build Fast, Beautiful Websites with <span class="font-black">11ty</span>
+          Next generation <span class="text-yellow-500">website builder</span>
       </h2>
-      <h3 class="text-lg md:text-xl md:leading-relaxed font-medium text-gray-600 lg:w-2/3 mx-auto">
-         11ty is a static site generator that makes it easy to create fast, beautiful, and SEO-friendly websites.
-      </h3>
-    </div>
-
-    <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-8 rounded-lg border text-center p-8">
-      <div class="space-y-4">
-        <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="text-purple-500 hi-outline hi-lightning-bolt inline-block w-8 h-8">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-        </svg>
-        <h3 class="font-medium">
-          Fast
+      <h3 class="text-lg md:text-xl md:leading-relaxed font-medium text-gray-600">
+          Super fast and easy to use software to power your next idea or build your client’s web projects. Get it today and profit.
         </h3>
-      </div>
-      <div class="space-y-4">
-        <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="text-emerald-500 hi-outline hi-beaker inline-block w-8 h-8">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z"></path>
-        </svg>
-        <h3 class="font-medium">
-          Creativity
-        </h3>
-      </div>
-      <div class="space-y-4">
-        <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="text-orange-500 hi-outline hi-badge-check inline-block w-8 h-8">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"></path>
-        </svg>
-        <h3 class="font-medium">
-          Design
-        </h3>
-      </div>
-      <div class="space-y-4">
-        <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="text-blue-500 hi-outline hi-check-circle inline-block w-8 h-8">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-        </svg>
-        <h3 class="font-medium">
-          Quality
-        </h3>
-      </div>
-      <div class="space-y-4">
-        <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
-        </svg>
-        <h3 class="font-medium">
-          Simplicity
-        </h3>
-      </div>
-      <div class="space-y-4">
-        <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="text-pink-500 hi-outline hi-fire inline-block w-8 h-8">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"></path>
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"></path>
-        </svg>
-        <h3 class="font-medium">
-          SEO-friendly
-        </h3>
+      <div class="flex flex-col sm:flex-row sm:items-center justify-center lg:justify-start space-y-2 sm:space-y-0 sm:space-x-2 pt-10 pb-16">
+        <a href="javascript:void(0)" class="inline-flex justify-center items-center space-x-2 border font-semibold focus:outline-none px-6 py-4 leading-6 rounded border-yellow-500 bg-yellow-500 text-white hover:text-white hover:bg-amber-600 hover:border-yellow-300 focus:ring focus:ring-yellow-700 focus:ring-opacity-50 active:bg-yellow-500 active:border-yellow-500">
+          <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="opacity-50 hi-solid hi-download inline-block w-5 h-5">
+            <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+          </svg>
+          <span>Download for free</span>
+        </a>
+        <a href="javascript:void(0)" class="inline-flex justify-center items-center space-x-2 border font-semibold focus:outline-none px-6 py-4 leading-6 rounded border-gray-300 bg-white text-gray-800 shadow-sm hover:text-gray-800 hover:bg-gray-100 hover:border-gray-300 hover:shadow focus:ring focus:ring-gray-500 focus:ring-opacity-25 active:bg-white active:border-white active:shadow-none">
+          <span>Learn more</span>
+        </a>
       </div>
     </div>
-    <!-- END Values with Icons -->
-
-    <!-- Values -->
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
-      <div>
-        <h3 class="flex items-center space-x-2 text-lg font-bold uppercase tracking-wide mb-2">
-          <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-          </svg>
-          <span>Super fast</span>
-        </h3>
-        <p class="leading-relaxed text-gray-600">
-          11ty websites are very fast. This is because they are generated in advance and saved to the file system. There is no need to generate the site on the fly each time a user visits it, which can save a lot of time and resources. The speed of 11ty websites can be a major advantage, especially for websites with a lot of traffic. A fast website will provide a better user experience and can help you improve your website's search engine ranking.
-        </p>
-      </div>
-      <div>
-        <h3 class="flex items-center space-x-2 text-lg font-bold uppercase tracking-wide mb-2">
-          <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
-          </svg>
-          <span>SEO-friendly</span>
-        </h3>
-        <p class="leading-relaxed text-gray-600">
-          11ty websites are easily crawled and indexed by search engines. This means that your website will be more likely to appear in search results, which can help you attract more visitors.
-        </p>
-      </div>
-      <div>
-        <h3 class="flex items-center space-x-2 text-lg font-bold uppercase tracking-wide mb-2">
-          <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
-            <path fill-rule="evenodd" d="M9.504 1.132a1 1 0 01.992 0l1.75 1a1 1 0 11-.992 1.736L10 3.152l-1.254.716a1 1 0 11-.992-1.736l1.75-1zM5.618 4.504a1 1 0 01-.372 1.364L5.016 6l.23.132a1 1 0 11-.992 1.736L4 7.723V8a1 1 0 01-2 0V6a.996.996 0 01.52-.878l1.734-.99a1 1 0 011.364.372zm8.764 0a1 1 0 011.364-.372l1.733.99A1.002 1.002 0 0118 6v2a1 1 0 11-2 0v-.277l-.254.145a1 1 0 11-.992-1.736l.23-.132-.23-.132a1 1 0 01-.372-1.364zm-7 4a1 1 0 011.364-.372L10 8.848l1.254-.716a1 1 0 11.992 1.736L11 10.58V12a1 1 0 11-2 0v-1.42l-1.246-.712a1 1 0 01-.372-1.364zM3 11a1 1 0 011 1v1.42l1.246.712a1 1 0 11-.992 1.736l-1.75-1A1 1 0 012 14v-2a1 1 0 011-1zm14 0a1 1 0 011 1v2a1 1 0 01-.504.868l-1.75 1a1 1 0 11-.992-1.736L16 13.42V12a1 1 0 011-1zm-9.618 5.504a1 1 0 011.364-.372l.254.145V16a1 1 0 112 0v.277l.254-.145a1 1 0 11.992 1.736l-1.735.992a.995.995 0 01-1.022 0l-1.735-.992a1 1 0 01-.372-1.364z" clip-rule="evenodd"></path>
-          </svg>
-          <span>Flexibilify</span>
-        </h3>
-        <p class="leading-relaxed text-gray-600">
-          11ty is a flexible static site generator that can be used to create a wide range of websites. It is easy to use and has a lot of features that make it easy to create beautiful websites.
-        </p>
-      </div>
+  </div>
+  <div class="lg:w-1/2 lg:ml-16 lg:flex lg:justify-center lg:items-center">
+    <div class="lg:w-96 mx-5 relative">
+      <div class="absolute pattern-dots-xl text-amber-100 top-0 left-0 w-32 h-48 md:h-96 transform -translate-y-12 -translate-x-16 -rotate-3"></div>
+      <div class="absolute pattern-dots-xl text-amber-100 bottom-0 right-0 w-32 h-48 md:h-96 transform translate-y-12 translate-x-16 rotate-3"></div>
+      <div class="absolute inset-0 rounded-xl bg-amber-100 bg-opacity-50 -m-4 transform rotate-2"></div>
+      <div class="absolute inset-0 rounded-xl bg-amber-200 bg-opacity-50 -m-4 transform -rotate-2"></div>
+      <img src="/img/hero.jpg" alt="Hero Image" class="relative rounded-lg mx-auto shadow-lg"/>
     </div>
   </div>
 </div>
