--- a/site/_css/base.css
+++ b/site/_css/base.css
@@ -3,7 +3,7 @@
 @import "tailwindcss/utilities";
 
 body {
-  @apply p-0 bg-white;
+  @apply bg-white;
   font-family: "system-ui", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Open Sans", "Helvetica Neue", "Arial", "Noto Sans", "sans-serif", "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol", "Noto Color Emoji";
