--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -13,8 +13,8 @@
 
 <link rel="preload" as="script" href="/main.js" fetchpriority="high" />
 
-{# <link rel="preload" as="style" href="/main.css" fetchpriority="high" />
-<link media="print" rel="stylesheet" href="/main.css" onload="this.media='all';this.onload=null;"/> #}
+<link rel="preload" as="style" href="/style.css" fetchpriority="high" />
+<link media="print" rel="stylesheet" href="/style.css" onload="this.media='all';this.onload=null;"/>
 
 <link rel="manifest" href="/manifest.webmanifest" />
 
