--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ locale }}" dir="{{ dir }}" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-{% include "meta.njk" %}
-<style>
-  {% set css %}
-  {% include "../_css/main.css" %}
-  {% endset %}
-  {{ css | postcss | safe }}
-</style>
+  {% include "meta.njk" %}
+  <style>
+    body {
+      padding: 0;
+    }
+  </style>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   {% include "header.njk" %}
@@ -17,5 +17,5 @@
 
   {% include "footer.njk" %}
 </body>
-  <script src="/main.js"></script>
+<script src="/main.js"></script>
 </html>
