refactor: build js into single file

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -11,7 +11,7 @@
 
 <meta charset="utf-8" />
 
-<link rel="preload" as="script" href="/main.js" fetchpriority="high" />
+<link rel="preload" as="script" href="/script.js" fetchpriority="high" />
 
 <link rel="preload" as="style" href="/style.css" fetchpriority="high" />
 <link media="print" rel="stylesheet" href="/style.css" onload="this.media='all';this.onload=null;"/>
