feat: add version to script & style output

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -11,10 +11,10 @@
 
 <meta charset="utf-8" />
 
-<link rel="preload" as="script" href="/script.js" fetchpriority="high" />
+<link rel="preload" as="script" href="/script-0.js" fetchpriority="high" />
 
-<link rel="preload" as="style" href="/style.css" fetchpriority="high" />
-<link media="print" rel="stylesheet" href="/style.css" onload="this.media='all';this.onload=null;"/>
+<link rel="preload" as="style" href="/style-0.css" fetchpriority="high" />
+<link media="print" rel="stylesheet" href="/style-0.css" onload="this.media='all';this.onload=null;"/>
 
 <link rel="manifest" href="/manifest.webmanifest" />
 
