--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -7,7 +7,7 @@
       padding: 0;
     }
   </style>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/style-0.css">
 </head>
 <body>
   {% include "header.njk" %}
@@ -17,5 +17,5 @@
 
   {% include "footer.njk" %}
 </body>
-<script src="/script.js"></script>
+<script src="/script-0.js"></script>
 </html>
