refactor: use esbuild as filter

--- a/site/_script.njk
+++ b/site/_script.njk
@@ -1,5 +1,8 @@
 ---
 permalink: /script-0.js
 ---
+{% set js %}
+  {% include "./_js/banner.js" %}
+{% endset %}
 
-{% include "./_js/banner.js" %}
+{{ js | esbuild | safe }}
