--- a/site/_script.njk
+++ b/site/_script.njk
@@ -4,6 +4,7 @@ eleventyExcludeFromCollections: true
 ---
 {% set js %}
   {% include "./_js/banner.js" %}
+  {% include "./_js/register-service-worker.js" %}
 {% endset %}
 
 {{ js | esbuild | safe }}
