--- a/site/_style.njk
+++ b/site/_style.njk
@@ -5,5 +5,6 @@ eleventyExcludeFromCollections: true
 
 {% set css %}
   {% include "./_css/base.css" %}
+  {% include "./_css/vazirmatn-font.css" %}
 {% endset %}
 {{ css | postcss | safe }}
