refactor: move body style to class

--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="{{ site.locale }}" dir="{{ site.dir }}" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="{{ site.locale }}" dir="{{ site.dir }}">
   <head>
     {% include "meta.njk" %}
     <link rel="stylesheet" href="/style.css?v={{ git.shortSha }}">
   </head>
-  <body>
+
+  <body class="bg-white">
     {% include "header.njk" %}
     {% include "nav.njk" %}
     {{ content | safe }}
