feat: add feed.atom

--- a/site/_sitemap.njk
+++ b/site/_sitemap.njk
@@ -8,6 +8,7 @@ eleventyExcludeFromCollections: true
     <url>
       <loc>{{ env.siteUrl }}{{ page.url | url }}</loc>
       <lastmod>{{ page.date.toISOString() }}</lastmod>
+      <changefreq>{{ item.data.sitemapChangefreq | default("monthly") }}</changefreq>
       <priority>{{ page.data.priority | default(1) }}</priority>
     </url>
   {% endfor %}
