feat: add google-analytics

--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -12,5 +12,6 @@
     {% include "footer.njk" %}
 
     <script src="/script.js?v={{ git.shortSha }}"></script>
+    {% include "google-analytics.njk" %}
   </body>
 </html>
