feat: build typescript before eleventy

--- a/site/_script.njk
+++ b/site/_script.njk
@@ -1,10 +1,8 @@
 ---
-permalink: /script.js
+permalink: false
 eleventyExcludeFromCollections: true
 ---
 {% set js %}
-  {% include "./_js/banner.js" %}
-  {% include "./_js/register-service-worker.js" %}
 {% endset %}
 
 {{ js | esbuild | safe }}
