refactor: build service worker with esbuild

--- a/site/_service-worker.njk
+++ b/site/_service-worker.njk
@@ -1,9 +1,9 @@
 ---
-permalink: /service-worker.js
+permalink: false
 eleventyExcludeFromCollections: true
 ---
 {% set js %}
-  {% include "./_js/service-worker.ts" %}
+  {# {% include "./_js/service-worker.ts" %} #}
 {% endset %}
 
 {{ js | esbuild | safe }}
