--- a/site/_includes/header.njk
+++ b/site/_includes/header.njk
@@ -1,5 +1,5 @@
 <header class="header flex flex-row justify-between items-center w-screen fixed px-4 py-4 gap-10 z-20 transition-all">
-  <img class="w-10" src="/img/logo.png" alt="logo">
+  <a href="/"><img class="w-10" src="/img/logo.png" alt="logo"></a>
   <div class="flex flex-row justify-end grow gap-8 items-center text-md font-bold">
     {% for menu in nav.main %}
       <a class="text-neutral-700 hidden lg:block hover:text-neutral-800 hover:no-underline {% if page.url==menu.url %} text-neutral-950 {% endif %}" href="{{ menu.url }}">
