chore: rename navigation-drawer

--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -7,7 +7,7 @@
 
   <body class="bg-white">
     {% include "header.njk" %}
-    {% include "nav.njk" %}
+    {% include "navigation-drawer.njk" %}
     {{ content | safe }}
     {% include "footer.njk" %}
 
