perf: disable additional transition

--- a/site/_includes/header.njk
+++ b/site/_includes/header.njk
@@ -1,4 +1,4 @@
-<header class="header flex flex-row justify-between items-center w-screen fixed px-4 py-4 gap-10 z-20 transition-all">
+<header class="header flex flex-row justify-between items-center w-screen fixed px-4 py-4 gap-10 z-20">
   <a href="/"><img class="w-10" src="/img/logo.png" alt="logo"></a>
   <div class="flex flex-row justify-end grow gap-8 items-center text-md font-bold">
     {% for menu in nav.main %}
