refactor(feed): change file extension

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -17,7 +17,7 @@
 <link media="print" rel="stylesheet" href="/style.css?v={{ git.shortSha }}" onload="this.media='all';this.onload=null;"/>
 
 <link rel="manifest" href="/manifest.webmanifest"/>
-{# <link rel="alternate" title="Blog Posts" type=application/atom+xml href="/feed.atom"> #}
+{# <link rel="alternate" title="Blog Posts" type=application/atom+xml href="/feed.xml"> #}
 <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 
 <meta name="color-scheme" content="light dark"/>
