--- a/site/en/home.njk
+++ b/site/en/home.njk
@@ -1,6 +1,8 @@
 ---
 title: Home
 permalink: /
+eleventyNavigation:
+  key: Home
 ---
 <div class="flex flex-col lg:flex-row space-y-16 lg:space-y-0 text-center lg:text-left container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
   <div class="lg:w-1/2 lg:flex lg:items-center">
