--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/style.css?v={{ git.shortSha }}">
   </head>
 
-  <body class="bg-white">
+  <body class="bg-background selection:bg-secondary selection:text-onSecondary">
     {% include "header.njk" %}
     {% include "navigation-drawer.njk" %}
     {{ content | safe }}
