--- a/site/_css/base.css
+++ b/site/_css/base.css
@@ -1,9 +1,5 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
-body {
-  font-family: "system-ui", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Open Sans", "Helvetica Neue", "Arial", "Noto Sans", "sans-serif", "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", "Noto Color Emoji";
-}
+@import '@alwatr/style/main.css';
+@import '@alwatr/style/palettes/h300.css';
+@import './vazirmatn-font.css';
+@import './post.css';
+@import './syntax-highlighter.css';
