--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -11,13 +11,15 @@
 
 <meta charset="utf-8"/>
 
+{# <meta name="generator" content="{{ eleventy.generator }}"> #}
+
 <link rel="preload" as="script" href="/script.js?v={{ git.shortSha }}" fetchpriority="high"/>
 
 <link rel="preload" as="style" href="/style.css?v={{ git.shortSha }}" fetchpriority="high"/>
 <link media="print" rel="stylesheet" href="/style.css?v={{ git.shortSha }}" onload="this.media='all';this.onload=null;"/>
 
 <link rel="manifest" href="/manifest.webmanifest"/>
-{# <link rel="alternate" title="Blog Posts" type=application/atom+xml href="/feed.xml"> #}
+<link rel="alternate" title="Blog Posts" type=application/atom+xml href="/feed.xml">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 
 <meta name="color-scheme" content="light dark"/>
