--- a/site/_includes/blog-post-list.njk
+++ b/site/_includes/blog-post-list.njk
@@ -8,7 +8,7 @@
     </h3>
   </div>
   <div class="flex flex-row flex-wrap justify-center gap-2 md:gap-8 w-full">
-    {% for post in collections.post %}
+    {% for post in collections.blog %}
       <a href="{{ post.url }}" class="py-5 cursor-pointer lg:w-2/5 medium:w-2/5 group">
 
         <div class="mesh-gradient flex flex-col flex-wrap justify-center items-center p-5 mb-4 text-center group-hover:drop-shadow-lg rounded-lg overflow-clip transition">
