feat: enhance navigation

--- a/site/en/home.njk
+++ b/site/en/home.njk
@@ -3,8 +3,9 @@ title: Home
 permalink: /
 eleventyNavigation:
   key: Home
+  order: 0
 ---
-<div class="flex flex-col lg:flex-row space-y-16 lg:space-y-0 text-center lg:text-left container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
+<main class="flex flex-col lg:flex-row space-y-16 lg:space-y-0 text-center lg:text-left container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
   <div class="lg:w-1/2 lg:flex lg:items-center">
     <div>
       <div class="font-semibold inline-flex px-2 py-1 leading-4 mb-2 text-sm rounded text-gray-700 bg-gray-200">
@@ -38,4 +39,4 @@ eleventyNavigation:
       <img src="/img/hero.jpg" alt="Hero Image" class="relative rounded-lg mx-auto shadow-lg"/>
     </div>
   </div>
-</div>
+</main>
