--- a/site/en/blog.njk
+++ b/site/en/blog.njk
@@ -2,6 +2,9 @@
 title: Blog
 eleventyNavigation:
   key: Blog
+  order: 2
 ---
 
-{% include "blog-post-list.njk" %}
+<main>
+  {% include "blog-post-list.njk" %}
+</main>
