feat(app-navigation): set material color for

--- a/site/_includes/footer.njk
+++ b/site/_includes/footer.njk
@@ -1,4 +1,4 @@
-<footer id="page-footer" class="bg-white">
+<footer>
   <div class="text-center text-sm lg:text-base container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
     <div class="space-y-10">
       <nav class="space-x-4">
