--- a/site/_includes/header.njk
+++ b/site/_includes/header.njk
@@ -1,16 +1,16 @@
-<header class="header flex flex-row justify-between items-center w-screen fixed px-4 py-4 gap-10 z-20">
+<header class="header flex flex-row justify-between items-center gap-10 w-screen fixed px-4 py-4 text-onBackground z-20">
   <a href="/"><img class="w-10" src="/img/logo.png" alt="logo"></a>
   <div class="flex flex-row justify-end grow gap-8 items-center text-md font-bold">
     {% for menu in collections.all | eleventyNavigation %}
-      <a class="text-neutral-700 hidden lg:block hover:text-neutral-700 hover:no-underline {% if page.url == menu.url %} text-neutral-950 {% endif %}" href="{{ menu.url }}">
+      <a class="hidden lg:block hover:brightness-200 hover:no-underline {% if page.url == menu.url %} brightness-150 {% endif %}" href="{{ menu.url }}">
         {{ menu.key }}
       </a>
     {% endfor %}
-    <span class="menu-button block lg:hidden m-1 p-0 bg-transparent cursor-pointer z-30">
-      <svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+    <span class="menu-button block lg:hidden m-1 p-0 cursor-pointer z-30">
+      <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
     </span>
   </div>
-  <a class="hidden md:block" href="{{ contact.phone.url }}">
+  {# <a class="hidden md:block" href="{{ contact.phone.url }}">
     <button class="border font-semibold focus:outline-none px-6 py-2 leading-6 rounded border-yellow-500 bg-yellow-500 text-white hover:text-white hover:bg-amber-600 hover:border-yellow-300 focus:ring focus:ring-yellow-700 focus:ring-opacity-50 active:bg-yellow-500 active:border-yellow-500">Call us</button>
-  </a>
+  </a> #}
 </header>
