--- a/site/_layouts/blog-post.njk
+++ b/site/_layouts/blog-post.njk
@@ -2,7 +2,7 @@
 layout: base.njk
 ---
 
-<div class="post-container lg:px-24 m-10">
+<main class="post-container lg:px-24 m-10 mt-40">
 
   <div class="mesh-gradient select-none flex flex-col justify-center items-center p-10 mb-10 text-center drop-shadow-2xl rounded-lg overflow-clip">
     <h1 class="title font-extrabold mx-4 my-8 md:text-[4.5em] text-[2.5em] leading-none text-white drop-shadow-xl" style="letter-spacing: -0.03em">
@@ -41,7 +41,7 @@ layout: base.njk
       </div>
     </div>
   </article>
-</div>
+</main>
 
 {% include "blog-json-dl.njk" %}
 {% include "breadcrumb-json-dl.njk" %}
