--- a/site/_includes/header.njk
+++ b/site/_includes/header.njk
@@ -1,4 +1,4 @@
-<header class="header flex flex-row justify-between items-center gap-10 w-screen fixed px-4 py-4 text-onBackground z-20">
+<header class="header flex flex-row justify-between items-center gap-10 w-screen fixed px-4 py-4 text-onBackground z-20 top-0">
   <a href="/"><img class="w-10" src="/img/logo.png" alt="logo"></a>
   <div class="flex flex-row justify-end grow gap-8 items-center text-md font-bold">
     {% for menu in collections.all | eleventyNavigation %}
