--- a/site/_includes/navigation-drawer.njk
+++ b/site/_includes/navigation-drawer.njk
@@ -1,4 +1,4 @@
-<nav class="navigation-drawer flex flex-col items-center w-3/4 md:w-2/5 h-screen fixed px-4 pt-14 gap-5 bg-surface text-onSurface z-40 transform-gpu -translate-x-full rtl:translate-x-full transition-transform">
+<nav class="navigation-drawer flex flex-col items-center w-3/4 md:w-2/5 h-screen fixed top-0 px-4 pt-14 gap-5 bg-surface text-onSurface z-40 transform-gpu -translate-x-full rtl:translate-x-full transition-transform">
   {# <a class="w-full" href="{{ contact.phone.url }}">
     <button class="w-full border font-semibold focus:outline-none px-6 py-2 leading-6 rounded border-yellow-500 bg-yellow-500 text-white hover:text-white hover:bg-amber-600 hover:border-yellow-300 focus:ring focus:ring-yellow-700 focus:ring-opacity-50 active:bg-yellow-500 active:border-yellow-500">Call us</button>
   </a> #}
