refactor: use image for bg post

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -33,11 +33,11 @@
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="{{ currentUrl }}"/>
 
-{% set socialImage = socialImage or sharing_image or thumbnail or hero or site.defaultSocialImage %}
+{% set socialImagePath = socialImage or sharing_image or thumbnail or hero or site.defaultSocialImage %}
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="/{{ socialImage }}"/>
-<meta property="og:image" content="/{{ socialImage }}"/>
+<meta name="twitter:image" content="/{{ socialImagePath }}"/>
+<meta property="og:image" content="/{{ socialImagePath }}"/>
 
 {% if socialImageAlt %}
   <meta property="og:image:alt" content="{{ socialImageAlt }}"/>
@@ -53,10 +53,10 @@
   <meta name="twitter:creator" content="@{{ contact.twitter }}"/>
 {% endif %}
 
-<meta name="authors" content="{{ authors or site.author.name | sort }}"/>
+<meta name="authors" content="{{ author or site.author.name }}"/>
 
-{% if tags %}
-  <meta name="tags" content="{{ tags | sort }}"/>
+{% if keywords %}
+  <meta name="tags" content="{{ keywords | sort }}"/>
 {% endif %}
 
 <link rel="icon" type="image/png" sizes="32x32" href="/img/meta/icon-32.png"/>
