--- a/site/_includes/blog-post-list.njk
+++ b/site/_includes/blog-post-list.njk
@@ -11,12 +11,13 @@
     {% for post in collections.blog %}
       <a href="{{ post.url }}" class="py-5 cursor-pointer lg:w-2/5 medium:w-2/5 group">
 
-        <div class="mesh-gradient flex flex-col flex-wrap justify-center items-center p-5 mb-4 text-center group-hover:drop-shadow-lg rounded-lg overflow-clip transition">
-          <h2 style="letter-spacing: -0.03em" class="title font-extrabold mx-4 my-8 md:text-[2em] text-[2.5em] leading-none text-white">
-            {{ post.data.title }}
-          </h2>
+        <div class="rounded-lg overflow-clip mb-2">
+          {% image post.data.socialImage, post.data.socialImageAlt or "Cover post" %}
         </div>
 
+        <h2 style="letter-spacing: -0.03em" class="font-extrabold my-2 md:text-[2em] text-[2.5em] leading-none">
+          {{ post.data.title }}
+        </h2>
         <p class="leading-relaxed text-secondary mb-1">
           {{ post.data.description }}
         </p>
