feat(style): change folder structure

--- a/site/_style.njk
+++ b/site/_style.njk
@@ -4,6 +4,6 @@ eleventyExcludeFromCollections: true
 ---
 
 {% set css %}
-  {% include "./_css/base.css" %}
+  {% include "./_css/main.css" %}
 {% endset %}
 {{ css | postcss | safe }}
