--- a/site/_includes/blog-post-list.njk
+++ b/site/_includes/blog-post-list.njk
@@ -1,4 +1,4 @@
-<main class="space-y-16 container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
+<div class="space-y-16 container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
   <div class="text-center">
     <h2 class="text-3xl md:text-4xl font-extrabold mb-4 text-primary">
       My posts
@@ -32,4 +32,4 @@
       </a>
     {% endfor %}
   </div>
-</main>
+</div>
