refactor: add breadcrumb structured data to base

--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -13,5 +13,6 @@
 
     <script src="/script.js?v={{ git.shortSha }}"></script>
     {% include "google-analytics.njk" %}
+    {% include "structured-data/breadcrumb.njk" %}
   </body>
 </html>
