refactor(image): add base folder

--- a/site/_includes/meta.njk
+++ b/site/_includes/meta.njk
@@ -36,8 +36,8 @@
 {% set socialImagePath = socialImage or sharing_image or thumbnail or hero or site.defaultSocialImage %}
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="/{{ socialImagePath }}"/>
-<meta property="og:image" content="/{{ socialImagePath }}"/>
+<meta name="twitter:image" content="{{ socialImagePath }}"/>
+<meta property="og:image" content="{{ socialImagePath }}"/>
 
 {% if socialImageAlt %}
   <meta property="og:image:alt" content="{{ socialImageAlt }}"/>
